--- a/package.json
+++ b/package.json
@@ -69,9 +69,7 @@
     "webext-bridge": "^6.0.1",
     "webextension-polyfill": "^0.10.0"
   },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
-  },
+  "simple-git-hooks": {},
   "lint-staged": {
     "*": "eslint --fix"
   },
