新增配置页面

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "typescript": "^4.9.5",
     "unocss": "^0.51.12",
     "unplugin-auto-import": "^0.15.3",
+    "unplugin-element-plus": "^0.8.0",
     "unplugin-icons": "^0.16.1",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.5",
@@ -74,6 +75,7 @@
     "*": "eslint --fix"
   },
   "dependencies": {
+    "@lljj/vue3-form-element": "^1.18.0",
     "element-plus": "^2.3.7"
   }
 }
